# pydit

./: .gitignore  .pylintrc  .readthedocs.yaml  CHANGE LOG.md  CHANGELOG.md  README.md  audit.log.2  build_all.sh  changelog.py  cheatsheet.md  cheatsheet.txt  conf.py  conf.yaml  data.csv  demo.ipynb  demo.py  pyproject.toml  pytest.ini  pytest_coverage.sh  requirements.txt  requirements_freeze.txt  scrapbook01.ipynb  scrapbook02.ipynb  scrapbook03.ipynb  scrapbook04.ipynb  scrapbook05.ipynb  setup.cfg  setup.py  test_nonzero_len.xlsx  test_zero_len.xlsx  tests.py  vimmotions.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
.ipynb_checkpoints/: demo-checkpoint.ipynb  scrapbook03-checkpoint.ipynb
demo_data/: output.xlsx
docs/source/: api.rst  conf.py  index.rst
docs/source/_autosummary/: pydit.add_counts_between_related_df.rst  pydit.add_percentile.rst  pydit.anonymise_key.rst  pydit.benford_list_anomalies.rst  pydit.benford_to_dataframe.rst  pydit.benford_to_plot.rst  pydit.check_blanks.rst  pydit.check_duplicates.rst  pydit.check_referential_integrity.rst  pydit.check_sequence.rst  pydit.cleanup_column_names.rst  pydit.coalesce_columns.rst  pydit.coalesce_values.rst  pydit.collapse_levels.rst  pydit.count_cumulative_unique.rst  pydit.create_calendar.rst  pydit.filemanager.rst  pydit.fillna_smart.rst  pydit.functions.add_counts.rst  pydit.functions.add_percentile.rst  pydit.functions.anonymise.rst  pydit.functions.check_benford.rst  pydit.functions.check_blanks.rst  pydit.functions.check_duplicates.rst  pydit.functions.check_referential_integrity.rst  pydit.functions.check_sequence.rst  pydit.functions.cleanup_column_names.rst  pydit.functions.coalesce_columns.rst  pydit.functions.coalesce_values.rst  pydit.functions.collapse_levels.rst  pydit.functions.count_cumulative_unique.rst  pydit.functions.create_calendar.rst  pydit.functions.fillna_smart.rst  pydit.functions.groupby_text.rst  pydit.functions.keyword_search.rst  pydit.functions.profile_dataframe.rst  pydit.functions.rst  pydit.groupby_text.rst  pydit.logger.rst  pydit.profile_dataframe.rst  (+2 more)
docs/source/_templates/: custom-module-template.rst
examples/: demo.ipynb  demo.py  demo2.py  scrapbook01.ipynb  scrapbook03.ipynb
examples/Duplicates analysis/: Check for duplicates.ipynb
examples/Duplicates analysis/input/: data.xlsx
examples/Duplicates analysis/output/: 102_Duplicates.xlsx
examples/demo_data/: data.csv  demo_data.xlsx
examples/demo_output/: output.xlsx
examples/sqlite for processing data/: dbspecs.txt  sqlite data cleanup.ipynb
experimental/sqlite for processing data/: dbspecs.json  dbspecs.sql  load_test_data.ipynb  pack01  sqlalchemyversion.ipynb  sqlite data cleanup.ipynb
pydit/: CHANGELOG.md  __init__.py  base_tools.py  common.py  date_tools.py  file_tools.py  filemanager.py  fm.py  logger.py  model_tools.py  modelling.py  presenting.py  profiling.py  profiling_tools.py  pydit_core.py  pydit_core_old.py  pydit_profiling.py  scrap2  transform.py  transform_tools.py  utils.py  validate.py  validation_tools.py  vimmotions.md  viz_tools.py
pydit-jceresearch/: meta.yaml
pydit/functions/: __init__.py  add_counts.py  add_percentile.py  anonymise.py  benford.py  blanks.py  calendar.py  calendar_table.py  charts.py  check_benford.py  check_blanks.py  check_duplicates.py  check_referential_integrity.py  check_sequence.py  cleanup_column_names.py  cleanup_dataframe_columns_names.py  coalesce_categories.py  coalesce_columns.py  coalesce_dataframe_columns.py  coalesce_dataframe_values.py  coalesce_values.py  collapse_dataframe_levels.py  collapse_levels.py  common_maps.py  count_cumulative.py  count_cumulative_unique.py  counts.py  create_calendar.py  date_time_calculations.py  duplicates.py  excel_tools.py  file_utils.py  fillna.py  fillna_smart.py  fuzzy_matching.py  groupby_text.py  groupby_text_concatenate.py  keyword_search.py  keyword_search_batch.py  lookup_values.py  (+11 more)
pydit/statistics/: __init__.py  benford.py  percentile.py  profile_dataframe_statistics.py  simulation.py
pydit/wrangling/: __init__.py  anonymise.py  blanks.py  calendar_table.py  cleanup_dataframe_columns_names.py  coalesce_dataframe_columns.py  coalesce_dataframe_values.py  collapse_dataframe_levels.py  counts.py  date_time_calculations.py  duplicates.py  file_utils.py  fillna.py  fuzzy_matching.py  groupby_text_concatenate.py  keyword_search_batch.py  map_common_values.py  merge.py  referential_integrity_check.py  sequence.py  split_transactions.py  truncate_datetime.py  various.py
scrap/: Untitled.ipynb  scrapbook01.ipynb  scrapbook02.ipynb
scrap/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  scrapbook01-checkpoint.ipynb  scrapbook02-checkpoint.ipynb
scrapbook/: _check_mapping.py  _test_charts.py  awesome.py  charts.py  charts_dev.py  complete.py  concatenate_columns.py  flattening a pivot table.ipynb  mapping rag categories.ipynb  scrapbook01.ipynb  scrapbook02.ipynb  scrapbook03.ipynb
tests/: conftest.py  scrap.py  template.py  test_add_counts.py  test_add_percentile.py  test_anonymise.py  test_base.py  test_benford.py  test_blanks.py  test_calendar.py  test_charts.py  test_check_benford.py  test_check_blanks.py  test_check_duplicates.py  test_check_referential_integrity.py  test_check_sequence.py  test_clean_columns_name.py  test_clean_string.py  test_cleanup_column_name.py  test_coalesce_columns.py  test_coalesce_values.py  test_collapse_levels.py  test_common.py  test_core.py  test_count_cumulative_unique.py  test_count_notna.py  test_count_related.py  test_count_related_key.py  test_count_values_in_col.py  test_date_time.py  test_deduplicate_list.py  test_duplicates.py  test_file.py  test_filemanager  test_filemanager.py  test_fillna.py  test_fillna_smart.py  test_fuzzy.py  test_groupby_text.py  test_keyword_search.py  (+21 more)
tests/output/: test.xlsx
tests/test_data/: test_data.xlsx
