[tool.poetry]
name = "pydit-jceresearch"
readme="README.md"
packages = [
	{ include = "pydit" }
]
version = "0.1.01"
description = "Data cleansing tools for Internal Auditors"
authors = ["jceresearch <jceresearch@users.noreply.github.com>"]
keywords=["internal audit", "munging", "cleansing", "audit","wrangling","pandas"]
classifiers=[
"Development Status :: 3 - Alpha",
"Programming Language :: Python :: 3 :: Only",
"License :: OSI Approved :: MIT License"
]
license = "MIT"
documentation="https://pydit.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
numpy = "*"
openpyxl="*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
myst-parser = "2.0.0"
pytest = "*"
pytest-cov = "*"
sphinx = "*"
pydata-sphinx-theme = "0.13.3"
sphinx-book-theme = "*"

[build-system]
requires = ["poetry","poetry-core>=1.0.0","setuptools","myst-parser>=2.0.0"]
build-backend = "poetry.core.masonry.api"
