[project]
name = "pydit-jceresearch"
version = "0.2.00"
description = "Tools for data cleansing specifically for Internal Auditors"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "jceresearch", email = "jceresearch@gmail.com" }]
keywords = ["internal audit", "munging", "data cleansing", "pyjanitor", "pandas", "wrangling"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
]


[project.urls]
Homepage = "https://github.com/jceresearch/pydit"
"Bug Tracker" = "https://github.com/jceresearch/pydit/issues"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "coverage",
]
docs = [
  "sphinx",
  "myst-parser",
  "pydata-sphinx-theme",
  "sphinx-book-theme",
]
lint = [
  "ruff",
]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "sphinx",
  "myst-parser",
  "pydata-sphinx-theme",
  "sphinx-book-theme",
  "ruff",
  "ipykernel",
]


[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydit"]
