[metadata]
name = pydit
version = 0.0.11
author = jceresearch
author_email = jceresearch@gmail.com
description = Library of tools for data munging and analysis specifically for Internal Auditors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jceresearch/pydit
project_urls =
    Bug Tracker = https://github.com/jceresearch/pydit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
keywords = internal audit, munging, data cleansing, pyjanitor
[options]
package_dir =
    = pydit
packages = find:
python_requires = >=3.9
install_requires = 
    pandas
    numpy
    matplotlib
    openpyxl   # for excel writing
    myst_parser    

[options.packages.find]
where = pydit

[options.extras_require]
docs =
    sphinx
    myst-parser