[metadata]
name = pydit
version = 0.1.02
author = jceresearch
author_email = jceresearch@gmail.com
description = Tools for data cleansing specifically for Internal Auditors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jceresearch/pydit
project_urls =
    Bug Tracker = https://github.com/jceresearch/pydit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
keywords = internal audit, munging, data cleansing, pyjanitor, pandas, wrangling
[options]
package_dir =
    = pydit
packages = find:
python_requires = >=3.11
install_requires = 
    matplotlib==3.7.2
    numpy==1.25.2
    openpyxl==3.1.2
    pandas==2.0.3

[options.packages.find]
where = pydit

[options.extras_require]
docs =
    sphinx
    myst-parser